--- a/Foundations/white-paper/main.tex
+++ b/Foundations/white-paper/main.tex
@@ -52,7 +52,10 @@ Any person that contributes to ISK on any level, is a collaborator.
 He/She is welcomed to enjoy the free society we are aiming to build.
 
 \section{Licenses}
-\subsection{Software/Code Licenses}
-\subsection{Products}
+For our open-source products, we adopt the GNU General Public License version 2.0 (GPL-2.0). This ensures that our work remains open-source and freely available for anyone to use, modify, and distribute. The GPL-2.0 license guarantees that any derivative works also remain open and contribute back to the community, aligning with our core principles of decentralization, collaboration, and open-access.
+
+For our source available products we adopt a license that supports our vision of open knowledge while restricting commercial use. These products will be licensed under the Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license. This license allows others to remix, tweak, and build upon our work non-commercially, as long as they credit us and license their new creations under the identical terms.
+
+
 
 \end{document}
